--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500&family=Sevillana&display=swap');
 
 *{
     font-size: 32px;
@@ -12,5 +13,13 @@ html,body, #root{
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100%;
+}
+
+h1{
+    font-family: 'Sevillana', cursive;
+    font-weight: bold;
+}
+span{
+    font-weight: bold;
 }
 
